--- a/app/src/main/res/layout/activity_profit_strategies.xml
+++ b/app/src/main/res/layout/activity_profit_strategies.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfitStrategiesActivity"
+    tools:context=".activities.ProfitStrategiesActivity"
     android:padding="8dp">
 
     <TextView
