--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,6 +13,9 @@
             android:icon="@drawable/ic_about"
             android:title="@string/menu_about" />
 
+        <item android:id="@+id/ListOfDeveloper"
+            android:icon="@drawable/ic_about"
+            android:title="@string/ListOfDeveloper" />
 
     </group>
 
