--- a/app/src/main/res/layout/activity_team_member.xml
+++ b/app/src/main/res/layout/activity_team_member.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.members.TeamMemberActivity1">
+    tools:context=".activities.members.TeamMemberActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
