--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -48,22 +48,19 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:id="@+id/log_in"
-        android:layout_width="90dp"
-        android:layout_height="46dp"
-        android:layout_gravity="center"
-        android:layout_marginTop="30dp"
-        android:layout_marginLeft="110dp"
-        android:layout_marginRight="110dp"
-        android:layout_marginBottom="16dp"
-        android:background="@color/background_color4"
-        android:text="@string/log_in"
-        android:textColor="@color/colorPrimary"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        android:focusableInTouchMode="true"
-        />
+        <Button
+            android:id="@+id/log_in"
+            android:layout_width="90dp"
+            android:layout_height="36dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="110dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="110dp"
+            android:layout_marginBottom="16dp"
+            android:background="@color/background_color4"
+            android:text="@string/log_in"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
     <TextView
         android:id="@+id/reg_phone"
