--- a/app/src/main/res/layout/activity_phone_auth.xml
+++ b/app/src/main/res/layout/activity_phone_auth.xml
@@ -24,39 +24,33 @@
             android:padding="20dp"
             android:layout_marginBottom="30dp"/>
 
+        <Spinner
+            android:id="@+id/spinnerCountries"
+            android:layout_width="120dp"
+            android:layout_height="wrap_content" />
+
         <EditText
             android:id="@+id/editTextPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="2"
             android:digits="0123456789"
-            android:ems="10"
-            android:hint="@string/enter_phone"
-            android:inputType="phone" />
+            android:hint=" Phone no"
+            android:maxLength="10" />
 
         <Button
-            android:id="@+id/buttonGetVerificationCode"
-            android:layout_width="match_parent"
+            android:id="@+id/buttonContinue"
+            android:layout_width="183dp"
             android:layout_height="wrap_content"
-            android:layout_margin="30dp"
-            android:background="@color/background_color3"
-            android:text="@string/get_verificationcode"
-            android:textAllCaps="false" />
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="88dp"
+            android:background="#00e5ff"
+            android:text="Send OTP"
+            android:textAllCaps="false"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/editTextCode"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:digits="0123456789"
-            android:hint="@string/enter_verificationcode"
-            android:inputType="number" />
-
-        <Button
-            android:id="@+id/buttonSignIn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="30dp"
-            android:background="@color/background_color4"
-            android:text="@string/log_in" />
 
     </LinearLayout>
 
