--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -55,6 +55,15 @@
         android:textSize="22dp"
         android:layout_gravity="center"/>
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_edit"
+            android:layout_margin="16dp"
+            android:baselineAlignBottom="true"
+            android:clickable="true"
+            app:backgroundTint="@color/background_color3" />
     </LinearLayout>
 
 </ScrollView>
