--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,14 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_login"
+            android:icon="@drawable/ic_login"
+            android:title="@string/log_in" />
+        <item
+            android:id="@+id/nav_profile"
+            android:icon="@drawable/ic_profile"
+            android:title="@string/profile" />
+        <item
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_offers"
             android:title="@string/menu_home" />
@@ -29,6 +37,10 @@
                 android:id="@+id/nav_rate"
                 android:icon="@drawable/ic_rate"
                 android:title="@string/menu_rate" />
+            <item
+                android:id="@+id/nav_signOut"
+                android:icon="@drawable/ic_sign_out"
+                android:title="@string/signout" />
         </menu>
     </item>
 
