Solve Problems in Phone Signin

--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -15,7 +15,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="232dp"
         android:ems="10"
-        android:hint="   OTP"
+        android:hint="@string/enter_verificationcode"
         android:inputType="textMultiLine"
         android:textColorHint="@android:color/black"
         tools:layout_editor_absoluteX="85dp"
@@ -29,7 +29,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="82dp"
         android:background="#00e5ff"
-        android:text="Create Account"
+        android:text="@string/login"
         android:textColor="@android:color/background_light"
         android:textSize="20sp"
         android:textStyle="bold"
