--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#050E11</color>
+    <color name="colorPrimaryDark">#050A11</color>
     <color name="colorAccent">#D81B60</color>
     <color name="background_color1">#006666</color>
     <color name="background_color2">#009999</color>
     <color name="background_color3">#00cccc</color>
     <color name="background_color4">#99ffff</color>
     <color name="background_color5">#00e6e6</color>
+    <color name="background_color6">#FFFFFF</color>
+    <color name="action_bar_color">#050A11</color>
 </resources>
